--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@flaticon/flaticon-uicons": "^3.3.1",
         "@tailwindcss/vite": "^4.1.4",
         "tailwindcss": "^4.1.4"
     }
